--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>dark-switch</title>
+		<title>vue-dark-switch</title>
 	</head>
 	<body>
 		<div id="app"></div>
